Fix sponsors logo spacing

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1225,14 +1225,14 @@ a {
   text-decoration: underline;
 }
 
-.e-content ol, .e-content ul {
-    list-style: disc outside none;
-     padding-left: 40px;
+.e-content ol,
+.e-content ul {
+  list-style: disc outside none;
+  padding-left: 40px;
 }
 
 /* undo stupid non specific classnames */
 .e-content .contents .first {
-
 }
 
 a:hover {
@@ -1281,11 +1281,11 @@ p {
 }
 
 .sponsors-link {
-  margin-bottom: 1rem;
   background: var(--white);
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   border-radius: 0.5rem;
+  margin: 2rem 4rem;
 }
 
 .sponsors-link--platinum {
@@ -1295,7 +1295,7 @@ p {
 
 .sponsors-link--gold {
   width: 250px;
-  height:250px;
+  height: 250px;
 }
 
 .sponsors-link--silver {
@@ -1437,4 +1437,6 @@ p {
 .features > .item {
   width: 300px;
 }
-.schedule-right > p { margin-bottom: 3rem !important; }
+.schedule-right > p {
+  margin-bottom: 3rem !important;
+}
